--- a/app/globals.css
+++ b/app/globals.css
@@ -1,23 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+* {
+    user-select: none;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #292f36;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #292f36;
+        --foreground: #ededed;
+    }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: 'Noto Sans', sans-serif;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: "Noto Sans", sans-serif;
 }
