--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
     user-select: none;
 }
 
+img {
+    pointer-events: none;
+}
+
 :root {
     --background: #ffffff;
     --foreground: #171717;
